# codeswarm

./: .env.example  .gitignore  AUTO_EXTRACT_FEATURE.md  BROWSER_USE_DEBUG_INFO.md  BROWSER_USE_FINAL_STATUS.md  BROWSER_USE_LOCAL_AGENT.md  BROWSER_USE_STATUS.md  CHANGELOG.md  DEMO_PACKAGE_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_STATUS.md  LICENSE  README.md  READY_FOR_HACKATHON.md  SECURITY_AND_SETUP_COMPLETE.md  SETUP_GUIDE.md  codeswarm  codeswarm.py  codeswarm_cli.py  demo_file_extraction.py  demo_full_integration.py  demo_live_generation.py  docker-compose.yml  extract_and_deploy_demo.py  extract_and_launch.py  generate_workos_cookie_password.sh  inspect_daytona_workspace.py  package-lock.json  package.json  pyproject.toml  read_workspace_file.py  requirements.txt  test_daytona_deployment.py  test_galileo_integration.py  test_galileo_logging.py  test_services_quick.py  test_tavily_cache.py
demo/: DEMO_PRESENTATION_GUIDE.md  DEMO_PROMPTS.md  DEMO_VISUALS.md  QUICK_PROMPT_CHANGE.md  README.md  SKETCH_INSTRUCTIONS.md  WHICH_DEMO_TO_USE.md  codeswarm.py  create_sample_sketch.py  demo.py  demo_interactive.py  demo_presentation.py  demo_quick.py  demo_real.py  wireframe.txt
demos/: demo_full_integration.py  demo_live_generation.py  demo_show_extraction.py
docs/: API_CONFIGURATION_STATUS.md  API_KEYS_NEEDED.md  ARCHITECTURE_DIAGRAMS.md  BLOCKER_API_KEYS.md  BROWSER_USE_VS_TAVILY.md  COMPLETE_SETUP_GUIDE.md  DAYTONA_URL_INVESTIGATION.md  DEMO_GUIDE.md  FEATURE_HIGHLIGHTS.md  FINAL_STATUS.md  GALILEO_INVESTIGATION_RESULTS.md  HOUR_2_STATUS.md  PYTHON_SETUP.md  (+18 more)
(+91 files in other folders)
